Use the 1.2 DATABASES setting format

--- a/settings.py.conf
+++ b/settings.py.conf
@@ -23,12 +23,16 @@ LOGIN_REDIRECT_URL = '/'
 
 SITE_NAME = '{{ site_name }}.com'
 
-DATABASE_ENGINE     = 'postgresql_psycopg2'
-DATABASE_HOST       = ''
-DATABASE_PORT       = ''
-DATABASE_NAME       = '{{ site_name }}_main'
-DATABASE_USER       = 'postgres'
-DATABASE_PASSWORD   = ''
+DATABASES = {
+    'default': {
+        'ENGINE'     : 'postgresql_psycopg2',
+        'HOST'       : '',
+        'PORT'       : '',
+        'NAME'       : '{{ site_name }}_main',
+        'USER'       : 'postgres',
+        'PASSWORD'   : ''
+    }
+}
 
 if DEBUG:
     CACHE_BACKEND = 'dummy://'
