Updating wsgi conf to use virtualenv settings

--- a/wsgi.conf
+++ b/wsgi.conf
@@ -1,17 +1,13 @@
 import os, sys
-
-apache_configuration= os.path.dirname(__file__)
-project = os.path.dirname(apache_configuration)
-workspace = os.path.dirname(project)
-sys.path.append(workspace)
+import site
 
 # redirect print statements to apache log
 sys.stdout = sys.stderr
 
-{% for path in pythonpath %}
-sys.path.insert(0, '{{ path }}')
-{% endfor %}
-sys.path.insert(0, '{{ base_site }}{{ site_name }}.com/{{ site_name }}/')
+root_dir = '{{ site_root }}'
+site.addsitedir(os.path.join(root_dir, 'lib/python2.6/site-packages/'))
+sys.path.insert(0, root_dir)
+sys.path.insert(0, os.path.join(root_dir, '{{ site_name }}'))
 
 os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.settings'
 import django.core.handlers.wsgi
