--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,9 @@ server {
   access_log  {{ logs }}nginx_access.log;
   error_log   {{ logs }}nginx_error.log;
   location / {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
     proxy_pass  http://{{ site_name }}proxy;
     include     /etc/nginx/proxy.conf;
   }
