--- a/django/conf.yaml
+++ b/django/conf.yaml
@@ -30,6 +30,7 @@ files:
     '%(conf)shosts': hosts.conf
     '%(conf)sports.conf': ports.conf
     '%(conf)sgunicorn.conf.py': gunicorn.conf
+    '%(project_root)srequirements.txt': requirements.txt
 local_files:
     '%(conf)slocal_apache_%(site_name)s': apache.conf
     '%(conf)slocal_nginx_%(site_name)s': nginx.conf
