Fixing static media locations referred to in nginx confs

--- a/django/nginx.conf
+++ b/django/nginx.conf
@@ -21,7 +21,7 @@ server {
     include     /etc/nginx/proxy.conf;
   }
   location /media/ {
-    root {{ site_root }};
+    root {{ project_root }};
   }
 }
 
