--- a/flask/nginx.conf
+++ b/flask/nginx.conf
@@ -20,8 +20,8 @@ server {
     proxy_pass  http://{{ site_name }}proxy;
     include     /etc/nginx/proxy.conf;
   }
-  location /media/ {
-    root {{ site_root }};
+  location /static/ {
+    root {{ project_root }};
   }
 }
 
