--- a/django/wsgi.conf
+++ b/django/wsgi.conf
@@ -5,9 +5,10 @@ import site
 sys.stdout = sys.stderr
 
 root_dir = '{{ site_root }}'
+project_dir = '{{ project_root }}'
 site.addsitedir(os.path.join(root_dir, 'lib/python2.6/site-packages/'))
 sys.path.insert(0, root_dir)
-sys.path.insert(0, os.path.join(root_dir, '{{ site_name }}'))
+sys.path.insert(0, project_root)
 
 os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.settings'
 import django.core.handlers.wsgi
