--- a/django/wsgi.conf
+++ b/django/wsgi.conf
@@ -8,7 +8,7 @@ root_dir = '{{ site_root }}'
 project_dir = '{{ project_root }}'
 site.addsitedir(os.path.join(root_dir, 'lib/python2.6/site-packages/'))
 sys.path.insert(0, root_dir)
-sys.path.insert(0, project_root)
+sys.path.insert(0, project_dir)
 
 os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.settings'
 import django.core.handlers.wsgi
