Removing the '.com' hardcode - thanks dpetzold for the idea

--- a/django/apache.conf
+++ b/django/apache.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:{{ port }}>
-  ServerAdmin {{ user }}@{{ site_name }}.com
-  ServerName {{ site_name }}.{% if local %}site{% else %}com{% endif %}
-  ServerAlias www.{{ site_name }}.{% if local %}site{% else %}com{% endif %}
+  ServerAdmin {{ user }}@{{ site_name }}.{{ site_domain }}
+  ServerName {{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %}
+  ServerAlias www.{{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %}
 
   <Directory {{ wsgi }}>
     Order deny,allow
@@ -12,8 +12,8 @@
   ErrorLog {{ logs }}apache_error.log
   CustomLog {{ logs }}apache_access.log combined
 
-  WSGIDaemonProcess {{ site_name }}.com user=www-data group=www-data threads=25
-  WSGIProcessGroup {{ site_name }}.com 
+  WSGIDaemonProcess {{ site_name }}.{{ site_domain }} user=www-data group=www-data threads=25
+  WSGIProcessGroup {{ site_name }}.{{ site_domain }} 
 
   WSGIScriptAlias / {{ wsgi }}{{ site_name }}.wsgi
 </VirtualHost>
