--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -21,7 +21,7 @@ CACHE_MIDDLEWARE_SECONDS = 60
 FORCE_WWW = True
 LOGIN_REDIRECT_URL = '/'
 
-SITE_NAME = '{{ site_name }}.com'
+SITE_NAME = '{{ site_name }}.{{ site_domain }}'
 
 DATABASES = {
     'default': {
