--- a/django/hosts.conf
+++ b/django/hosts.conf
@@ -1,1 +1,1 @@
-127.0.1.1   {{ site_name }}.{% if local %}site{% else %}com{% endif %}
+127.0.1.1   {{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %}
