--- a/django/nginx.conf
+++ b/django/nginx.conf
@@ -4,13 +4,13 @@ upstream {{ site_name }}proxy {
 
 server {
   listen      80;
-  server_name www.{{ site_name }}.{% if local %}site{% else %}com{% endif %};
-  rewrite ^/(.*) http://{{ site_name }}.{% if local %}site{% else %}com{% endif %}/$1 permanent;
+  server_name www.{{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %};
+  rewrite ^/(.*) http://{{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %}/$1 permanent;
 }
 
 server {
   listen      80;
-  server_name {{ site_name }}.{% if local %}site{% else %}com{% endif %};
+  server_name {{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %};
   access_log  {{ logs }}nginx_access.log;
   error_log   {{ logs }}nginx_error.log;
   location / {
