Adding a URL pattern to serve static media when DEBUG is on

--- a/django/urls.py.conf
+++ b/django/urls.py.conf
@@ -10,3 +10,10 @@ urlpatterns = patterns('',
     url(r'^$', 'django.views.generic.simple.direct_to_template', {'template': 'homepage.html'}),
 )
 
+if settings.DEBUG:
+    urlpatterns += patterns('',
+        url('^%s/(?P<path>.*)$' % settings.MEDIA_URL.strip('/'),
+            'django.views.static.serve',
+            kwargs={'document_root': settings.MEDIA_ROOT},
+        )
+    )
