--- a/django/urls.py.conf
+++ b/django/urls.py.conf
@@ -8,7 +8,6 @@ urlpatterns = patterns('',
     url(r'^admin/doc/', include('django.contrib.admindocs.urls')),
     url(r'^admin/', include(admin.site.urls)),
     url(r'^$', 'django.views.generic.simple.direct_to_template', {'template': 'homepage.html'}),
-    url(r'', include('django.contrib.flatpages.urls')),
 )
 
 if settings.DEBUG:
@@ -18,3 +17,7 @@ if settings.DEBUG:
             kwargs={'document_root': settings.MEDIA_ROOT},
         )
     )
+
+urlpatterns += patterns('',
+    url(r'', include('django.contrib.flatpages.urls')),
+)
