Adding upstart conf for django and taking off the daemon bits by default

--- a/django/conf.yaml
+++ b/django/conf.yaml
@@ -31,6 +31,7 @@ files:
     '%(conf)sports.conf': ports.conf
     '%(conf)sgunicorn.conf.py': gunicorn.conf
     '%(conf)ssite.fcgi': fcgi.conf
+    '%(conf)s%(site_name)s_upstart.conf': upstart.conf
     '%(project_root)srequirements.txt': requirements.txt
 local_files:
     '%(conf)slocal_apache_%(site_name)s': apache.conf
