--- a/django/gunicorn.conf
+++ b/django/gunicorn.conf
@@ -1,6 +1,8 @@
 bind = "127.0.0.1:{{ port }}"
-daemon = True
+#daemon = True
 pidfile = "{{ private }}gunicorn_{{ site_name }}.pid"
 logfile = "{{ logs }}gunicorn.log"
 loglevel = "warn"
 tmp_upload_dir = "/tmp/"
+workers = 2
+preload = True
