Big changes to now separate conf files into staging/ and production/ subdirectories, will require updating symlinks

--- a/django/apache.conf
+++ b/django/apache.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:{{ port }}>
   ServerAdmin {{ user }}@{{ site_name }}.{{ site_domain }}
-  ServerName {{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %}
-  ServerAlias www.{{ site_name }}.{% if local %}site{% else %}{{ site_domain }}{% endif %}
+  ServerName {{ site_name }}.{% if staging %}site{% else %}{{ site_domain }}{% endif %}
+  ServerAlias www.{{ site_name }}.{% if staging %}site{% else %}{{ site_domain }}{% endif %}
 
   <Directory {{ wsgi }}>
     Order deny,allow
@@ -12,8 +12,8 @@
   ErrorLog {{ logs }}apache_error.log
   CustomLog {{ logs }}apache_access.log combined
 
-  WSGIDaemonProcess {{ site_name }}.{{ site_domain }} user=www-data group=www-data threads=25
+  WSGIDaemonProcess {{ site_name }}.{{ site_domain }} user=www-data group=www-data threads={% if staging %}2{% else %}25{% endif %}
   WSGIProcessGroup {{ site_name }}.{{ site_domain }} 
 
-  WSGIScriptAlias / {{ wsgi }}{{ site_name }}.wsgi
+  WSGIScriptAlias / {{ wsgi }}{{ site_name }}{% if staging %}_staging{% endif %}.wsgi
 </VirtualHost>
