--- a/django/fcgi.conf
+++ b/django/fcgi.conf
@@ -8,7 +8,7 @@ site.addsitedir(os.path.join(root_dir, 'lib/python2.6/site-packages/'))
 sys.path.insert(0, root_dir)
 sys.path.insert(0, project_dir)
 
-os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.settings'
+os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.{% if staging %}debug{% else %}settings{% endif %}'
 
 from django.core.servers.fastcgi import runfastcgi
 runfastcgi(method="threaded", daemonize="false")
