--- a/django/gunicorn.conf
+++ b/django/gunicorn.conf
@@ -2,7 +2,7 @@ bind = "127.0.0.1:{{ port }}"
 #daemon = True
 pidfile = "{{ private }}gunicorn_{{ site_name }}.pid"
 logfile = "{{ logs }}gunicorn.log"
-loglevel = "warn"
+loglevel = "{% if staging %}debug{% else %}warn{% endif %}"
 tmp_upload_dir = "/tmp/"
-workers = 2
+workers = {% if staging %}1{% else %}4{% endif %}
 #preload = True
