--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -1,6 +1,6 @@
 import os
 
-DEBUG = False
+DEBUG = {% if staging %}True{% else %}False{% endif %}
 TEMPLATE_DEBUG = DEBUG
 
 ADMINS = (
@@ -11,8 +11,10 @@ MANAGERS = ADMINS
 SITE_ROOT = os.path.dirname(os.path.realpath(__file__))
 
 MEDIA_ROOT = '%s/media/' % (SITE_ROOT)
-MEDIA_URL = '/media/'
-ADMIN_MEDIA_PREFIX = '/media/admin/'
+
+MEDIA_DOMAIN = 'http://{{ site_name }}.{{ site_domain }}'
+MEDIA_URL = '%s/media/' % (MEDIA_DOMAIN)
+ADMIN_MEDIA_PREFIX = '%s/media/admin/' % (MEDIA_DOMAIN)
 
 CACHE_BACKEND = 'memcached://localhost:11211/'
 CACHE_KEY_PREFIX = '{{ site_name }}'
