--- a/django/upstart.conf
+++ b/django/upstart.conf
@@ -10,5 +10,5 @@ env VENV="{{ site_root }}"
 env SITE="{{ project_root }}"
 
 script
-exec sudo -u www-data $VENV/bin/gunicorn_django -c $SITE/conf/gunicorn.conf.py $SITE/settings.py
+exec sudo -u www-data $VENV/bin/gunicorn_django -c $SITE/conf/{% if staging %}staging{% else %}production{% endif %}/gunicorn.conf.py $SITE/{% if staging %}debug{% else %}settings{% endif %}.py
 end script
