--- a/flask/gunicorn.conf
+++ b/flask/gunicorn.conf
@@ -4,5 +4,5 @@ pidfile = "{{ private }}gunicorn_{{ site_name }}.pid"
 logfile = "{{ logs }}gunicorn.log"
 loglevel = "warn"
 tmp_upload_dir = "/tmp/"
-workers = 2
+workers = {% if staging %}1{% else %}4{% endif %}
 #preload = True
