--- a/django/wsgi.conf
+++ b/django/wsgi.conf
@@ -10,6 +10,6 @@ site.addsitedir(os.path.join(root_dir, 'lib/python2.6/site-packages/'))
 sys.path.insert(0, root_dir)
 sys.path.insert(0, project_dir)
 
-os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.settings'
+os.environ['DJANGO_SETTINGS_MODULE'] = '{{ site_name }}.{% if staging %}debug{% else %}settings{% endif %}'
 import django.core.handlers.wsgi
 application = django.core.handlers.wsgi.WSGIHandler()
