--- a/django/urls.py.conf
+++ b/django/urls.py.conf
@@ -11,9 +11,8 @@ urlpatterns = patterns('',
 )
 
 if settings.DEBUG:
-    media_url = settings.MEDIA_URL.replace(settings.MEDIA_DOMAIN, '')
     urlpatterns += patterns('',
-        url('^%s/(?P<path>.*)$' % media_url.strip('/'),
+        url('^%s(?P<path>.*)$' % settings.MEDIA_URL,
             'django.views.static.serve',
             kwargs={'document_root': settings.MEDIA_ROOT},
         )
