Clean up the slashes to ensure proper regex matching

--- a/django/urls.py.conf
+++ b/django/urls.py.conf
@@ -12,7 +12,7 @@ urlpatterns = patterns('',
 
 if settings.DEBUG:
     urlpatterns += patterns('',
-        url('^%s(?P<path>.*)$' % settings.MEDIA_URL,
+        url('^%s/(?P<path>.*)$' % settings.MEDIA_URL.strip('/'),
             'django.views.static.serve',
             kwargs={'document_root': settings.MEDIA_ROOT},
         )
