--- a/flask/supervisord.conf
+++ b/flask/supervisord.conf
@@ -1,5 +1,5 @@
 [program:{{ site_name }}]
-command={{ site_root }}bin/gunicorn -c {{ conf }}{% if staging %}staging{% else %}production{% endif %}/gunicorn.conf.py app:app
+command={{ site_root }}bin/python {{ conf }}{% if staging %}staging{% else %}production{% endif %}/gevent.conf.py
 directory={{ project_root }}
 user={{ user }}
 autostart=true
