Put the queue consumer in a single place, but use different files for log & pid when staging

--- a/django/queue.sh.conf
+++ b/django/queue.sh.conf
@@ -2,4 +2,4 @@
 VENV={{ site_root }}
 export DJANGO_SETTINGS_MODULE={{ site_name }}.{% if staging %}debug{% else %}settings{% endif %}
 cd $VENV
-$VENV/bin/python $VENV/src/djutils/djutils/queue/bin/consumer.py $1 -l $VENV/logs/queue.log -p $VENV/private/queue.pid
+$VENV/bin/python $VENV/src/djutils/djutils/queue/bin/consumer.py $1 -l $VENV/logs/{% if staging %}debug.{% endif %}queue.log -p $VENV/private/{% if staging %}debug.{% endif %}queue.pid
