--- a/django/supervisord.conf
+++ b/django/supervisord.conf
@@ -1,5 +1,5 @@
 [program:{{ site_name }}]
-command={{ site_root }}bin/python {{ conf }}{% if staging %}staging{% else %}production{% endif %}/gevent.conf.py
+command={{ site_root }}bin/gunicorn_django -c {{ conf }}{% if staging %}staging{% else %}production{% endif %}/gunicorn.conf.py {{ project_root }}{% if staging %}debug{% else %}settings{% endif %}.py
 directory={{ site_root }}
 user={{ user }}
 autostart=true
