Use gevent worker class

--- a/flask/gunicorn.conf
+++ b/flask/gunicorn.conf
@@ -5,4 +5,5 @@ logfile = "{{ logs }}gunicorn.log"
 loglevel = "warn"
 tmp_upload_dir = "/tmp/"
 workers = {% if staging %}1{% else %}4{% endif %}
+worker_class = "gevent"
 #preload = True
