--- a/django/gunicorn.conf
+++ b/django/gunicorn.conf
@@ -5,4 +5,5 @@ logfile = "{{ logs }}gunicorn.log"
 loglevel = "{% if staging %}debug{% else %}warn{% endif %}"
 tmp_upload_dir = "/tmp/"
 workers = {% if staging %}1{% else %}4{% endif %}
+worker_class = "gevent"
 #preload = True
