Adding a setting for the CACHE_MIDDLEWARE

--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -18,6 +18,7 @@ ADMIN_MEDIA_PREFIX = '%s/media/admin/' % (MEDIA_DOMAIN)
 
 CACHE_BACKEND = 'memcached://localhost:11211/'
 CACHE_KEY_PREFIX = '{{ site_name }}'
+CACHE_MIDDLEWARE_KEY_PREFIX = CACHE_KEY_PREFIX
 CACHE_MIDDLEWARE_SECONDS = 60
 
 FORCE_WWW = True
