--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -11,17 +11,18 @@ MANAGERS = ADMINS
 SITE_ROOT = os.path.dirname(os.path.realpath(__file__))
 
 MEDIA_ROOT = '%s/media/' % (SITE_ROOT)
-
 MEDIA_DOMAIN = 'http://{{ site_name }}.{{ site_domain }}'
 MEDIA_URL = '%s/media/' % (MEDIA_DOMAIN)
-ADMIN_MEDIA_PREFIX = '%s/media/admin/' % (MEDIA_DOMAIN)
+
+ADMIN_MEDIA_PREFIX = '/static/admin/'
+STATIC_ROOT = '%s/static/' % (SITE_ROOT)
+STATIC_URL = '/static/'
 
 CACHE_BACKEND = 'memcached://localhost:11211/'
 CACHE_KEY_PREFIX = '{{ site_name }}'
 CACHE_MIDDLEWARE_KEY_PREFIX = CACHE_KEY_PREFIX
 CACHE_MIDDLEWARE_SECONDS = 60
 
-FORCE_WWW = True
 LOGIN_REDIRECT_URL = '/'
 
 SITE_NAME = '{{ site_name }}.{{ site_domain }}'
@@ -56,6 +57,7 @@ TEMPLATE_CONTEXT_PROCESSORS = (
     'django.core.context_processors.auth',
     'django.core.context_processors.debug',
     'django.core.context_processors.media',
+    'django.core.context_processors.static',
     'django.contrib.messages.context_processors.messages',
     'django.core.context_processors.request'
 )
@@ -101,5 +103,6 @@ INSTALLED_APPS = (
     'django.contrib.messages',
     'django.contrib.sessions',
     'django.contrib.sites',
+    'django.contrib.staticfiles',
     #'south'
 )
