STATIC_ROOT is not MEDIA_ROOT

--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -15,8 +15,11 @@ MEDIA_DOMAIN = 'http://{{ site_name }}.{{ site_domain }}'
 MEDIA_URL = '%s/media/' % (MEDIA_DOMAIN)
 
 ADMIN_MEDIA_PREFIX = '/static/admin/'
-STATIC_ROOT = '%s/static/' % (SITE_ROOT)
+
 STATIC_URL = '/static/'
+STATICFILES_DIRS = (
+    '%s/static/' % (SITE_ROOT),
+)
 
 CACHE_BACKEND = 'memcached://localhost:11211/'
 CACHE_KEY_PREFIX = '{{ site_name }}'
