--- a/django/debug.py.conf
+++ b/django/debug.py.conf
@@ -1,4 +1,18 @@
 from settings import *
+
+# debug
 DEBUG = True
 TEMPLATE_DEBUG = True
+
+# point to local media
+ADMIN_MEDIA_PREFIX = '/static/admin/'
 MEDIA_URL = '/media/'
+
+# use local filesystem storage
+DEFAULT_FILE_STORAGE = 'django.core.files.storage.FileSystemStorage'
+
+# point to local machine for db
+DATABASES['default']['HOST'] = 'localhost'
+
+# turn off caching
+CACHE_BACKEND = 'dummy://'
