Adding staticfiles finders and dummy email

--- a/django/debug.py.conf
+++ b/django/debug.py.conf
@@ -16,3 +16,6 @@ DATABASES['default']['HOST'] = 'localhost'
 
 # turn off caching
 CACHE_BACKEND = 'dummy://'
+
+# use the dummy email backend
+EMAIL_BACKEND = 'django.core.mail.backends.dummy.EmailBackend'
