--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -48,6 +48,11 @@ SITE_ID = 1
 SECRET_KEY = '{{ secret_key }}'
 MESSAGE_STORAGE = 'django.contrib.messages.storage.session.SessionStorage'
 
+STATICFILES_FINDERS = (
+    'django.contrib.staticfiles.finders.FileSystemFinder',
+    'django.contrib.staticfiles.finders.AppDirectoriesFinder',
+)
+
 TEMPLATE_LOADERS = (
     'django.template.loaders.filesystem.load_template_source',
     'django.template.loaders.app_directories.load_template_source',
