Using manage.py as opposed to django-admin.py with the queue consumer

--- a/django/queue_consumer.conf
+++ b/django/queue_consumer.conf
@@ -1,5 +1,5 @@
 [program:queue_{{ site_name }}]
-command={{ site_root }}bin/django-admin.py queue_consumer {% if staging %}--settings=debug{% else %}--settings=settings{% endif %} -l {{ logs }}{% if staging %}debug_queue.log{% else %}queue.log{% endif %}
+command={{ site_root }}bin/python manage.py queue_consumer {% if staging %}--settings=debug{% else %}--settings=settings{% endif %} -l {{ logs }}{% if staging %}debug_queue.log{% else %}queue.log{% endif %}
 directory={{ project_root }}
 user={{ user }}
 autostart=true
