Adding some more common settings

--- a/django/debug.py.conf
+++ b/django/debug.py.conf
@@ -19,3 +19,7 @@ CACHE_BACKEND = 'dummy://'
 
 # use the dummy email backend
 EMAIL_BACKEND = 'django.core.mail.backends.dummy.EmailBackend'
+
+# use database for queue
+QUEUE_CLASS = 'djutils.queue.backends.database.DatabaseQueue'
+QUEUE_CONNECTION = ''
