--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -14,6 +14,10 @@ MEDIA_ROOT = '%s/media/' % (SITE_ROOT)
 MEDIA_DOMAIN = 'http://{{ site_name }}.{{ site_domain }}'
 MEDIA_URL = '%s/media/' % (MEDIA_DOMAIN)
 
+# for s3
+#MEDIA_DOMAIN = 'http://media.{{ site_name }}.{{ site_domain }}'
+#MEDIA_URL = '%s/' % (MEDIA_DOMAIN)
+
 ADMIN_MEDIA_PREFIX = '/static/admin/'
 
 STATIC_URL = '/static/'
@@ -26,13 +30,11 @@ CACHE_KEY_PREFIX = '{{ site_name }}'
 CACHE_MIDDLEWARE_KEY_PREFIX = CACHE_KEY_PREFIX
 CACHE_MIDDLEWARE_SECONDS = 60
 
-LOGIN_REDIRECT_URL = '/'
-
 SITE_NAME = '{{ site_name }}.{{ site_domain }}'
 
 DATABASES = {
     'default': {
-        'ENGINE'     : 'postgresql_psycopg2',
+        'ENGINE': 'django.db.backends.postgresql_psycopg2',
         'HOST'       : '',
         'PORT'       : '',
         'NAME'       : '{{ site_name }}_main',
@@ -91,8 +93,37 @@ TEMPLATE_DIRS = (
 #EMAIL_HOST_USER = '{{ site_email }}'
 #EMAIL_HOST_PASSWORD = '{{ site_email_password }}'
 #EMAIL_PORT = 587
+#DEFAULT_FROM_EMAIL = EMAIL_HOST_USER
 
-ANALYTICS = ''
+# contact app
+CONTACT_FROM_EMAIL = '{{ site_email }}'
+
+# use django-storages boto s3 backend
+#DEFAULT_FILE_STORAGE = 'storages.backends.s3boto.S3BotoStorage'
+
+# settings required for boto/storages
+AWS_ACCESS_KEY_ID = ''
+AWS_SECRET_ACCESS_KEY = ''
+AWS_STORAGE_BUCKET_NAME = 'media.{{ site_name }}.{{ site_domain }}'
+
+# overrides
+AWS_S3_CUSTOM_DOMAIN = 'media.{{ site_name }}.{{ site_domain }}'
+AWS_S3_SECURE_URLS = False
+
+# google analytics
+ANALYTICS = 'UA-xxxxxx-1'
+
+# akismet spam filter
+AKISMET_KEY = ''
+AKISMET_URL = 'http://{{ site_name }}.{{ site_domain }}'
+
+# taggit settings
+FORCE_LOWERCASE_TAGS = True
+
+# djutils queue settings
+QUEUE_CLASS = 'djutils.queue.backends.redis_backend.RedisQueue'
+QUEUE_NAME = '{{ site_name }}'
+QUEUE_CONNECTION = 'localhost:6379:0'
 
 INSTALLED_APPS = (
     'django.contrib.auth',
