Small cleanups related to API changes in skew -- fixing up flaskpeewee

--- a/flaskpeewee/skew_supervisord.conf
+++ b/flaskpeewee/skew_supervisord.conf
@@ -1,5 +1,5 @@
 [program:{{ site_name }}_queue]
-command={{ site_root }}bin/skew_consumer.py skew_config
+command={{ site_root }}bin/skew_consumer.py config.QueueConfiguration
 directory={{ project_root }}
 user={{ user }}
 autostart=true
