Do not autostart if its a staging site

--- a/django/supervisord.conf
+++ b/django/supervisord.conf
@@ -2,6 +2,6 @@
 command={{ site_root }}bin/gunicorn_django -c {{ conf }}{% if staging %}staging{% else %}production{% endif %}/gunicorn.conf.py {{ project_root }}{% if staging %}debug{% else %}settings{% endif %}.py
 directory={{ site_root }}
 user={{ user }}
-autostart=true
+autostart={% if staging %}false{% else %}true{% endif %}
 autorestart=true
 redirect_stderr=true
