--- a/flaskpeewee/supervisord.conf
+++ b/flaskpeewee/supervisord.conf
@@ -3,6 +3,6 @@ command={{ site_root }}bin/python {{ conf }}{% if staging %}staging{% else %}pro
 #command={{ site_root }}bin/gunicorn -c {{ conf }}{% if staging %}staging{% else %}production{% endif %}/gunicorn.conf.py main:app
 directory={{ project_root }}
 user={{ user }}
-autostart=true
+autostart={% if staging %}false{% else %}true{% endif %}
 autorestart=true
 redirect_stderr=true
