Replacing skew w/huey

--- a/flaskpeewee/conf.yaml
+++ b/flaskpeewee/conf.yaml
@@ -19,7 +19,7 @@ files:
     '%(production_conf)sgunicorn.conf.py': gunicorn.conf
     '%(production_conf)sgevent.conf.py': gevent.conf
     '%(production_conf)s%(site_name)s_supervisord.conf': supervisord.conf
-    '%(production_conf)s%(site_name)s_skew_supervisord.conf': skew_supervisord.conf
+    '%(production_conf)s%(site_name)s_huey_supervisord.conf': huey_supervisord.conf
     '%(project_root)s__init__.py': empty.conf
     '%(project_root)sadmin.py': admin.py
     '%(project_root)sapi.py': api.py
