--- a/flaskpeewee/huey_supervisord.conf
+++ b/flaskpeewee/huey_supervisord.conf
@@ -1,10 +1,10 @@
 [program:{{ site_name }}_queue]
-command={{ site_root }}bin/skew_consumer.py config.QueueConfiguration
+command={{ site_root }}bin/huey_consumer.py config.QueueConfiguration
 directory={{ project_root }}
 user={{ user }}
 autostart=true
 autorestart=true
 redirect_stderr=true
-stdout_logfile={{ logs }}skew_supervisor.out.log
-stderr_logfile={{ logs }}skew_supervisor.out.err
+stdout_logfile={{ logs }}huey_supervisor.out.log
+stderr_logfile={{ logs }}huey_supervisor.out.err
 environment=PYTHONPATH="{{ project_root }}:$PYTHONPATH"
