Cleaning up some of the queue consumer bits in flaskpeewee

--- a/flaskpeewee/conf.yaml
+++ b/flaskpeewee/conf.yaml
@@ -25,6 +25,7 @@ files:
     '%(project_root)sapi.py': api.py
     '%(project_root)sapp.py': app.py
     '%(project_root)sauth.py': auth.py
+    '%(project_root)scommands.py': commands.py
     '%(project_root)sconfig.py': config.py
     '%(project_root)smain.py': main.py
     '%(project_root)smodels.py': models.py
