--- a/flaskpeewee/huey_supervisord.conf
+++ b/flaskpeewee/huey_supervisord.conf
@@ -1,5 +1,5 @@
 [program:{{ site_name }}_queue]
-command={{ site_root }}bin/huey_consumer.py config.QueueConfiguration
+command={{ site_root }}bin/huey_consumer.py main.QueueConfiguration
 directory={{ project_root }}
 user={{ user }}
 autostart=true
