Moving to huey for queue consuming and using bootstrap for templates

--- a/django/settings.py.conf
+++ b/django/settings.py.conf
@@ -120,10 +120,16 @@ AKISMET_URL = 'http://{{ site_name }}.{{ site_domain }}'
 # taggit settings
 FORCE_LOWERCASE_TAGS = True
 
-# djutils queue settings
-QUEUE_CLASS = 'djutils.queue.backends.redis_backend.RedisQueue'
-QUEUE_NAME = '{{ site_name }}'
-QUEUE_CONNECTION = 'localhost:6379:0'
+# huey queue settings
+HUEY_CONFIG = {
+    'QUEUE': 'huey.backends.redis_backend.RedisQueue',
+    'RESULT_STORE': 'huey.backends.redis_backend.RedisDataStore',
+    'TASK_STORE': 'huey.backends.redis_backend.RedisDataStore',
+    'PERIODIC': True,
+    'THREADS': 4,
+    'LOGFILE': os.path.abspath(os.path.join(SITE_ROOT, '../logs/huey.log'))
+    'LOGLEVEL': logging.INFO,
+}
 
 INSTALLED_APPS = (
     'django.contrib.auth',
@@ -136,5 +142,6 @@ INSTALLED_APPS = (
     'django.contrib.sessions',
     'django.contrib.sites',
     'django.contrib.staticfiles',
-    #'south'
+    #'south',
+    #'huey.djhuey',
 )
