--- a/django/supervisord.conf
+++ b/django/supervisord.conf
@@ -5,3 +5,7 @@ user={{ user }}
 autostart={% if staging %}false{% else %}true{% endif %}
 autorestart=true
 redirect_stderr=true
+stdout_logfile={{ logs }}web.out
+stdout_logfile_maxbytes=5MB
+stderr_logfile={{ logs }}web.err
+stderr_logfile_maxbytes=5MB
